<resources>
    <string name="app_name">ExercicioTabLayoutViewPager</string>
    <string name="nao_socio">Não Sócio</string>
    <string name="socio">Sócio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_da_empresa">Nome da Empresa</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
</resources>